syntax = "proto3";

package oatot;

import "google/protobuf/timestamp.proto";

message SiteAuth {
  string btc_address = 1;
  string session_id = 2;
}

message OaAuth {
  string cl_guid = 1;
}

message SiteLoginStep1Request {
  string btc_address = 1;
}

message SiteLoginStep1Response {
  string challenge = 1;
}

message SiteLoginStep2Request {
  string btc_address = 1;
  string challenge = 2;
  string signed_text = 3;
  string signature = 4;
}

message SiteLoginStep2Response {
  string session_id = 2;
}

message SiteLogoutRequest {
  SiteAuth site_auth = 1;
}

message SiteLogoutResponse {
}

message OaLoginStep1Request {
  string cl_guid = 1;
}

message OaLoginStep1Response {
  string token = 1;
}

message SiteOaLoginStep2Request {
  SiteAuth site_auth = 1;
  string token = 2;
}

message SiteOaLoginStep2Response {
}

message SiteMyClGuidsRequest {
  SiteAuth site_auth = 1;
}

message ClGuid {
  string cl_guid = 1;
  google.protobuf.Timestamp added_time = 2;
  google.protobuf.Timestamp last_used_time = 3;
}

message SiteMyClGuidsResponse {
  repeated ClGuid cl_guids = 1;
}

message SiteRemoveClGuidRequest {
  SiteAuth site_auth = 1;
  string cl_guid = 2;
}

message SiteRemoveClGuidResponse {
}

message SiteDepositBtcRequest {
  SiteAuth site_auth = 1;
}

message SiteDepositBtcResponse {
  string btc_address = 1;
}

message SiteWithdrawBtcRequest {
  SiteAuth site_auth = 1;
  string btc_address = 2;
  fixed64 satoshis = 3;
}

message SiteWithdrawBtcResponse {
  string tx = 1;
}

message OaMyBalanceRequest {
  OaAuth oa_auth = 1;
  string currency = 2;
}

message OaMyBalanceResponse {
  fixed64 free_money = 1;
  fixed64 money_on_bids = 2;
}

message Bid {
  // Filled by the user who makes the bid.
  string horse = 1;
  string currency = 2;
  fixed64 amount = 3;
  // Filled by the system.
  google.protobuf.Timestamp open_time = 4;
  google.protobuf.Timestamp close_time = 5;
  string winner = 6;
  fixed64 prize = 7;
}

message OaMyBidRequest {
  OaAuth oa_auth = 1;
  Bid bid = 2;
}

message OaMyBidResponse {
}

message OaCloseBidsRequest {
  string winner = 1;
}

message OaCloseBidsResponse {
}

message OaMyActiveBidsRequest {
  OaAuth oa_auth = 1;
}

message OaMyActiveBidsResponse {
  repeated Bid bids = 1;
}

message OaMyPastBidsRequest {
  OaAuth oa_auth = 1;
  fixed64 page_number = 2;
}

message OaMyPastBidsResponse {
  repeated Bid bids = 1;
}

message CurrencySummary {
  fixed64 total_bet = 1;
  fixed64 total_prize = 2;
  fixed64 total_lost = 3;
  fixed64 bets_won = 4;
  fixed64 bets_lost = 5;
}

message OaMyBidsSummaryRequest {
  OaAuth oa_auth = 1;
}

message OaMyBidsSummaryResponse {
  CurrencySummary oac_summary = 1;
  CurrencySummary btc_summary = 2;
}

service Oatot {

  rpc SiteLoginStep1(SiteLoginStep1Request) returns (SiteLoginStep1Response);

  rpc SiteLoginStep2(SiteLoginStep2Request) returns (SiteLoginStep2Response);

  rpc SiteLogout(SiteLogoutRequest) returns (SiteLogoutResponse);

  rpc OaLoginStep1(OaLoginStep1Request) returns (OaLoginStep1Response);

  rpc SiteOaLoginStep2(SiteOaLoginStep2Request) returns (SiteOaLoginStep2Response);

  rpc SiteMyClGuids(SiteMyClGuidsRequest) returns (SiteMyClGuidsResponse);

  rpc SiteRemoveClGuid(SiteRemoveClGuidRequest) returns (SiteRemoveClGuidResponse);

  rpc SiteDepositBtc(SiteDepositBtcRequest) returns (SiteDepositBtcResponse);

  rpc SiteWithdrawBtc(SiteWithdrawBtcRequest) returns (SiteWithdrawBtcResponse);

  rpc OaMyBalance(OaMyBalanceRequest) returns (OaMyBalanceResponse);

  rpc OaMyBid(OaMyBidRequest) returns (OaMyBidResponse);

  rpc OaCloseBids(OaCloseBidsRequest) returns (OaCloseBidsResponse);

  rpc OaMyActiveBids(OaMyActiveBidsRequest) returns (OaMyActiveBidsResponse);

  rpc OaMyPastBids(OaMyPastBidsRequest) returns (OaMyPastBidsResponse);

  rpc OaMyBidsSummary(OaMyBidsSummaryRequest) returns (OaMyBidsSummaryResponse);

}
